--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev:frontend": "npm --prefix frontend run dev",
-    "dev:backend": "backend\\venv\\Scripts\\python.exe backend\\api.py",
+    "dev:backend": "python backend\\api.py",
     "dev": "concurrently -n BACKEND,FRONTEND -c magenta,cyan \"npm run dev:backend\" \"npm run dev:frontend\""
   },
   "devDependencies": {
