--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,7 +4,9 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false, //
+    "checkJs": false, // <-- Atur ini ke false jika Anda memiliki file JS
+    "noImplicitAny": false //
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
