--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "strict": false, //
     "checkJs": false, // <-- Atur ini ke false jika Anda memiliki file JS
-    "noImplicitAny": false //
+    "noImplicitAny": false, //
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
